offload/tests/ui/fail_derive_float.rs
use offload::AnCompatible;

#[derive(AnCompatible)]
struct Measurement {
    value: f64,
}

fn main() {}
